crates/rsciter_macro/tests/compile_fail/no_content_module_test.rs
use rsciter_macro::xmod;

#[xmod]
mod no_content;

fn main() {}